--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
     <meta name="descripcion" content="Servicios de manejo y transporte de residuos, especiales, industriales y domésticos e instalación de contenedores, cumpliendo con las normas de calidad y seguridad.">
     <meta name="keywords" content="Recolección de residuos, manejo de residuos, manejo de solidos, Reducir el impacto ambiental, instalación de contenedores, medio ambiente Guanajuato">
     <meta name="robots" content="index,follow">
-    <title>SH Servicios</title>
+    <title>SH Contacto</title>
     <link rel="shortcut icon" href="assets/icon/favicon.ico" type="image/ico">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
