subiendo contador de visitas

--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
         <div class="copyrith">
           <h3 class="pie-page">&#169; Copyright, SH RECICLADORA RFC HEMD981219IX1, ServerLine Creación Web, Irapuato Gto. México 2023.</h3>
         </div>
+        <div id="sfc6trcedezjxdqybw982mw13m3fmllbpmc"></div> <script type="text/javascript" src="https://counter3.optistats.ovh/private/counter.js?c=6trcedezjxdqybw982mw13m3fmllbpmc&down=async" async></script> <br><a href="https://www.contadorvisitasgratis.com"></a><noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis"><img src="https://counter3.optistats.ovh/private/contadorvisitasgratis.php?c=6trcedezjxdqybw982mw13m3fmllbpmc" title="contador de visitas" alt="contador de visitas"></a></noscript>
     </footer>  
  </body>
 </html>
