actualizado palabara scrap y correos nuevos

--- a/contacto.html
+++ b/contacto.html
@@ -56,13 +56,13 @@
             <p class="text-icon-contacto">WHATSAPP</p>
                <img src="assets/img/whats.svg" alt="icon WhatsApp">
                <p class="text-icon-text">Enviar mensaje por WhatsApp en Web:</p><a class="cont-link" href="https://web.whatsapp.com/send/?phone=524624842639" target="_blank">Click Aqui</a>
-               <p class="text-icon-text">Enviar mensaje a WhatsApp con la aplicación:</p><a class="cont-link" href="https://api.whatsapp.com/send?phone=524624842639" target="_blank">Click Aqui (4624842639)</a>
+               <p class="text-icon-text">Enviar mensaje a WhatsApp con la aplicación:</p><a class="cont-link" href="https://api.whatsapp.com/send?phone=524624842639" target="_blank">Click Aqui</a>
            </div>
            <div class="contacto-icon">
             <p class="text-icon-contacto">CORREO</p>
                <img src="assets/img/correo.svg" alt="icon correo">
-               <p class="text-icon-text">Escríbenos a Nuestro correo:</p><a class="cont-link-correo">gerencia.ventas@shrecicladora.com</a>
-               <p class="text-icon-text">Enviar Correo:</p><a class="cont-link" href="mailto:gerencia.ventas@shrecicladora.com?subject=Necesito-información">Click Aqui</a>
+               <p class="text-icon-text">Escríbenos a Nuestro correo:</p><a class="cont-link-correo">gerenciaventas@shrecicladora.com </a>
+               <p class="text-icon-text">Enviar Correo:</p><a class="cont-link" href="mailto:gerenciaventas@shrecicladora.com?subject=Necesito-información">Click Aqui</a>
            </div>
          </div>
        </div>
