--- a/formulario.html
+++ b/formulario.html
@@ -15,7 +15,7 @@
 <section>
     <h2 class="titulo">Datos Requeridos:</h2>
     <form class="formulario"
-        action="https://formsubmit.co/asesorshrecicladora@gmail.com" 
+        action="https://formsubmit.co/gerenciaventas@shrecicladora.com" 
         method="post"
         name="primer_formulario"
         autocomplete="on"
