--- a/servicios.html
+++ b/servicios.html
@@ -54,7 +54,7 @@
            <div class="service_icon">
                <p class="text-icon">RESIDUOS INDUSTRIALES</p>
                <img src="assets/img/servicio2.svg" alt="icon servicio2">
-               <p class="text-descrip-icon">Recolección, transporte y manejo integral de residuos industriales.</p>
+               <p class="text-descrip-icon">Recolección, transporte, compra de scrap y manejo integral de residuos industriales.</p>
            </div>
            <div class="service_icon">
                <p class="text-icon">DESTRUCCIÓN FISCAL</p>
