actualizando metas de index

--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>SH Recicladora | Recolección de residuos | GTO</title>
+    <meta itemprop="description" content="Servicios de Manejo y Recolección de: Residuos, Industriales, Especiales, Scrap, Basura, Chatarra, Doméstico, Destrucción Fiscal e instalación de contenedores." />
+    <meta itemprop="name" content="SH Recicladora | Recolección de residuos | GTO" />
+    <meta property="og:locale" content="es" />
+    <meta property="og:url" content="https://websitesmx.github.io/"/>
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Servicios de Manejo y Recolección de: Residuos, Industriales, Especiales, Scrap, Basura, Chatarra, Doméstico, Destrucción Fiscal e instalación de contenedores." />
+    <meta name="google-site-verification" content="googlef391bd01b48c0ea2" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="descripcion" content="Servicios de manejo y transporte de residuos, especiales, industriales y domésticos e instalación de contenedores, cumpliendo con las normas de calidad y seguridad.">
-    <meta name="keywords" content="Recolección de residuos, manejo de residuos, manejo de solidos, Reducir el impacto ambiental, instalación de contenedores, medio ambiente Guanajuato">
+    <meta name="descripcion" content="Servicios de Manejo y Recolección de: Residuos, Industriales, Especiales, Scrap, Basura, Chatarra, Doméstico, Destrucción Fiscal e instalación de contenedores.">
+    <meta name="keywords" content="SH Recicladora, Servicio para el Estado de Guanajuato, &#xD;&#xA;  &#xD;&#xA; Recolección y manejo de: residuos y solidos&#xD;&#xA; , &#xD;&#xA;  &#xD;&#xA;  Manejo y compra de scrap&#xD;&#xA; , &#xD;&#xA;  &#xD;&#xA; Instalación de contenedores.">
     <meta name="robots" content="index,follow">
-    <title>SH Recicladora</title>
+    <link rel="canonical" href="index.html" />
     <link rel="shortcut icon" href="assets/icon/favicon.ico" type="image/ico">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
