--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>SH Recicladora | Recolección de residuos | GTO</title>
-    <meta itemprop="description" content="Servicios de Manejo y Recolección de: Residuos, Industriales, Especiales, Scrap, Basura, Chatarra, Doméstico, Destrucción Fiscal e instalación de contenedores." />
-    <meta itemprop="name" content="SH Recicladora | Recolección de residuos | GTO" />
-    <meta property="og:locale" content="es" />
-    <meta property="og:url" content="https://websitesmx.github.io/"/>
-    <meta property="og:type" content="website" />
-    <meta property="og:description" content="Servicios de Manejo y Recolección de: Residuos, Industriales, Especiales, Scrap, Basura, Chatarra, Doméstico, Destrucción Fiscal e instalación de contenedores." />
-    <meta name="google-site-verification" content="googlef391bd01b48c0ea2" />
+    <meta property="description" content="Servicios de Manejo y Recolección de: Residuos, Industriales, Especiales, Scrap, Basura, Chatarra, Doméstico, Destrucción Fiscal e instalación de contenedores.">
+    <meta property="name" content="SH Recicladora | Recolección de residuos | GTO">
+    <meta property="og:locale" content="es">
+    <meta property="og:url" content="https://websitesmx.github.io/">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="Servicios de Manejo y Recolección de: Residuos, Industriales, Especiales, Scrap, Basura, Chatarra, Doméstico, Destrucción Fiscal e instalación de contenedores.">
+    <meta name="google-site-verification" content="googlef391bd01b48c0ea2">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="descripcion" content="Servicios de Manejo y Recolección de: Residuos, Industriales, Especiales, Scrap, Basura, Chatarra, Doméstico, Destrucción Fiscal e instalación de contenedores.">
-    <meta name="keywords" content="SH Recicladora, Servicio para el Estado de Guanajuato, &#xD;&#xA;  &#xD;&#xA; Recolección y manejo de: residuos y solidos&#xD;&#xA; , &#xD;&#xA;  &#xD;&#xA;  Manejo y compra de scrap&#xD;&#xA; , &#xD;&#xA;  &#xD;&#xA; Instalación de contenedores.">
+    <meta name="keywords" content="SH Recicladora, Servicio para el Estado de Guanajuato, Recolección y manejo de: residuos y solidos, Manejo y compra de scrap, Istalación de contenedores.">
     <meta name="robots" content="index,follow">
-    <link rel="canonical" href="index.html" />
+    <link rel="canonical" href="index.html">
     <link rel="shortcut icon" href="assets/icon/favicon.ico" type="image/ico">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -186,7 +186,8 @@
         <div class="copyrith">
           <h3 class="pie-page">&#169; Copyright, SH RECICLADORA RFC HEMD981219IX1, ServerLine Creación Web, Irapuato Gto. México 2023.</h3>
         </div>
-        <div id="sfc6trcedezjxdqybw982mw13m3fmllbpmc"></div> <script type="text/javascript" src="https://counter3.optistats.ovh/private/counter.js?c=6trcedezjxdqybw982mw13m3fmllbpmc&down=async" async></script> <br><a href="https://www.contadorvisitasgratis.com"></a><noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis"><img src="https://counter3.optistats.ovh/private/contadorvisitasgratis.php?c=6trcedezjxdqybw982mw13m3fmllbpmc" title="contador de visitas" alt="contador de visitas"></a></noscript>
+        <div id="sfc6trcedezjxdqybw982mw13m3fmllbpmc"></div> <script  src="https://counter3.optistats.ovh/private/counter.js?c=6trcedezjxdqybw982mw13m3fmllbpmc&down=async" async></script> <br><a href="https://www.contadorvisitasgratis.com"></a><noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis"><img src="https://counter3.optistats.ovh/private/contadorvisitasgratis.php?c=6trcedezjxdqybw982mw13m3fmllbpmc" title="contador de visitas" alt="contador de visitas"></a></noscript>
     </footer>  
  </body>
+ <!--type="text/javascript"-->
 </html>
