actualizando h1 de index

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
          <div class="container-main imgcontainer">
             <img class="logo-ini" src="assets/img/logoSH-1.png" alt="logo SH Recicladora">
                 <h1 class="name-emp">SH Recicladora</h1>
-                <h2 id="CC" class="titulo">Recolección, manejo, transporte de residuos industriales, instalación de contenedores en Irapuato y en todo el corredor industrial de Guanajuato.</h2>
+                <h2 id="CC" class="titulo">Reciclaje, Residuos, Industriales, Especiales, Scrap, Basura, Chatarra, Destrucción Fiscal, Contenedores. En Irapuato y corredor industrial de Guanajuato.</h2>
     </div>   
 <section class="section">
      <div class="container-services">
