--- a/contacto.html
+++ b/contacto.html
@@ -20,15 +20,15 @@
                 <li class="nav-menu-item">
                     <a href="index.html" class="nav-menu-link">Inicio</a></li>
                 <li class="nav-menu-item">
-                    <a href="servicios.html" class="nav-menu-link">Servicios</a></li>
+                    <a href="index.html#SS" class="nav-menu-link">Servicios</a></li>
                 <li class="nav-menu-item">
                     <a href="nosotros.html" class="nav-menu-link">Nosotros</a></li>
                 <li class="nav-menu-item">
-                    <a href="contacto.html#CON" class="nav-menu-link">Contacto</a></li>
+                    <a href="contacto.html" class="nav-menu-link">Contacto</a></li>
              </ul>
           </nav>     
         </div>        
-    </header>   
+    </header>  
     <main class="main">
         <div class="container-contacto imgcontainer">
            <img class="logo-ini" src="assets/img/logoSH-1.png" alt="logo SH Recicladora">
@@ -114,9 +114,9 @@
         <nav class="nav-footer"> 
          <ul class="nav-maps">
             <li class="nav-map-item">
-                <a href="servicios.html" class="nav-map-link">* SERVICIOS</a></li>
+                <a href="index.html#SI" class="nav-map-link">* SERVICIOS</a></li>
             <li class="nav-map-item">
-                <a href="servicios.html#SS" class="nav-map-link">- Nuestros Servicios</a></li>
+                <a href="index.html#SS" class="nav-map-link">- Nuestros Servicios</a></li>
          </ul>
         </nav>
       </div>
