modificando links dirigidos a servicios

--- a/nosotros.html
+++ b/nosotros.html
@@ -20,7 +20,7 @@
                 <li class="nav-menu-item">
                     <a href="index.html" class="nav-menu-link">Inicio</a></li>
                 <li class="nav-menu-item">
-                    <a href="servicios.html" class="nav-menu-link">Servicios</a></li>
+                    <a href="index.html#SS" class="nav-menu-link">Servicios</a></li>
                 <li class="nav-menu-item">
                     <a href="nosotros.html" class="nav-menu-link">Nosotros</a></li>
                 <li class="nav-menu-item">
@@ -28,7 +28,7 @@
              </ul>
           </nav>     
         </div>        
-    </header>   
+    </header>
     <main class="main">
         <div id="MIS" class="container-nosotros imgcontainer">
            <img class="logo-ini" src="assets/img/logoSH-1.png" alt="logo SH Recicladora">
@@ -82,9 +82,9 @@
         <nav class="nav-footer"> 
          <ul class="nav-maps">
             <li class="nav-map-item">
-                <a href="servicios.html" class="nav-map-link">* SERVICIOS</a></li>
+                <a href="index.html#SI" class="nav-map-link">* SERVICIOS</a></li>
             <li class="nav-map-item">
-                <a href="servicios.html#SS" class="nav-map-link">- Nuestros Servicios</a></li>
+                <a href="index.html#SS" class="nav-map-link">- Nuestros Servicios</a></li>
          </ul>
         </nav>
       </div>
