subiendo imegenes ya ctualizando index

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
             <div class="group-service-icon">
                <div class="service_icon">
                    <p class="text-icon">RESIDUOS SÓLIDOS</p>
-                   <img src="assets/img/servicio1.svg" alt="icon servicio1">
+                   <img src="assets/img/residuos-SH-RECICLADORA-1.png" alt="recolector residuos solidos">
                    <p class="text-descrip-icon">Recolección y transporte de residuos sólidos urbanos con destino final en el relleno sanitario.</p>
                </div>
                <div class="service_icon">
                    <p class="text-icon">RESIDUOS INDUSTRIALES</p>
-                   <img src="assets/img/servicio2.svg" alt="icon servicio2">
+                   <img src="assets/img/residuos-SH-RECICLADORA-2.png" alt="recolector residuos industriales">
                    <p class="text-descrip-icon">Recolección, transporte, compra de scrap y manejo integral de residuos industriales.</p>
                </div>
                <div class="service_icon">
@@ -72,12 +72,12 @@
                 </div>
                 <div class="service_icon">
                    <p class="text-icon">CONTENEDORES</p>
-                   <img src="assets/img/servicio4.svg" alt="icon servicio4" >
+                   <img src="assets/img/contenedores-SH-RECICLADORA.png" alt="contenedores sh recicladora" >
                    <p class="text-descrip-icon">Fabricación e instalación de contenedores industriales en comodato.</p>
                </div>
                <div class="service_icon">
                 <p class="text-icon">MANEJO ESPECIAL</p>
-                <img src="assets/img/servicio5.svg" alt="icon servicio5">
+                <img src="assets/img/residuos-SH-RECICLADORA-3.png" alt="recolector de manejo especial">
                 <p class="text-descrip-icon">Recolección y transporte de residuos de manejo especial.</p>
             </div>
              </div>   
