modificando index y contacto

--- a/index.html
+++ b/index.html
@@ -39,19 +39,20 @@
     </header>   
     
 <main class="main">
-         <div class="container-main imgcontainer">
+         <div class="container-main-inicio imgcontainer">
             <img class="logo-ini" src="assets/img/logoSH-1.png" alt="logo SH Recicladora">
                 <h1 class="name-emp">SH Recicladora</h1>
-                <h2 id="SI" class="titulo">Reciclaje, Residuos, Industriales, Especiales, Scrap, Basura, Chatarra, Destrucción Fiscal, Contenedores. En Irapuato y corredor industrial de Guanajuato.</h2>
+                <h2 id="SI" class="titulo">Reciclaje, Residuos, Industriales, Especiales, Scrap, Basura, Chatarra, Destrucción Fiscal, Contenedores.</h2>
+                <h2 class="titulo">En Irapuato y corredor industrial de Guanajuato.</h2>
     </div>   
     <section class="section">
-        <div class="container-services">
+        <div id="SS" class="container-services">
           
            <div class="servicios-container">
                <div class="box_section">
-                   <h2 id="SS" class="titulo">PONEMOS A SU DISPOSICIÓN LOS SIGUIENTES SERVICIOS</h2>
-                   <h3 class="descripcion">Somos la mejor opción para prestar servicios de recolección y transporte de residuos de manejo especial a cualquier empresa y reducir el impacto ambiental en Irapuato y en todo el corredor industrial de Guanajuato.</h3>
-               </div>        
+                   <h2 class="descripcion-inicio">SH Recicladora es la mejor opción para prestar servicios de recolección y transporte de residuos de manejo especial a la empresa que lo requiera y reducir el impacto ambiental en el estado de Guanajuato.</h2>
+                   <h3  class="titulo">A SU DISPOSICIÓN CONTAMOS CON LOS SIGUIENTES SERVICIOS</h3>
+                </div>        
           </div>
           <div class="group-service">
             <div class="group-service-icon">
@@ -103,24 +104,24 @@
           <div class="group-services">
              <div class="group-services-icons">
                 <div class="service_icons">
-                    <p class="text-icons">VANGUARDIA</p>
+                    <p class="text-icon">VANGUARDIA</p>
                     <img src="assets/img/vanguardia.svg" alt="icon vanguardia">
-                    <p class="text-descrip-icons">Contamos con el equipo necesario para satisfacer sus necesidades de residuos.</p>
+                    <p class="text-descrip-icon">Contamos con el equipo necesario para satisfacer sus necesidades de residuos.</p>
                 </div>
                 <div class="service_icons">
-                    <p class="text-icons">FABRICAMOS</p>
+                    <p class="text-icon">FABRICAMOS</p>
                     <img src="assets/img/fabricamos.svg" alt="icon fabricamos">
-                    <p class="text-descrip-icons">Contamos con el capital para la compra o fabricación de maquinaria y/o herramienta para el mejor manejo de sus residuos.</p>
+                    <p class="text-descrip-icon">Contamos con el capital para la compra o fabricación de maquinaria y/o herramienta para el mejor manejo de sus residuos.</p>
                 </div>
                 <div class="service_icons">
-                    <p class="text-icons">PERSONAL</p>
+                    <p class="text-icon">PERSONAL</p>
                     <img src="assets/img/personal.svg" alt="icon personal">
-                    <p class="text-descrip-icons">Todo nuestro personal está altamente capacitado para cumplir con los servicios en tiempo y forma.</p>
+                    <p class="text-descrip-icon">Todo nuestro personal está altamente capacitado para cumplir con los servicios en tiempo y forma.</p>
                  </div>
                  <div class="service_icons">
-                    <p class="text-icons">MEDIO AMBIENTE</p>
+                    <p class="text-icon">MEDIO AMBIENTE</p>
                     <img src="assets/img/ambiente.svg" alt="icon medio ambiente">
-                    <p id="NC" class="text-descrip-icons">Reducir al mínimo el impacto ambiental generado.</p>
+                    <p id="NC" class="text-descrip-icon">Reducir al mínimo el impacto ambiental generado.</p>
                 </div>
               </div>   
           </div>
