--- a/contacto.html
+++ b/contacto.html
@@ -33,7 +33,7 @@
         <div class="container-contacto imgcontainer">
            <img class="logo-ini" src="assets/img/logoSH-1.png" alt="logo SH Recicladora">
                <h1 class="name-emp">SH Recicladora</h1>
-               <h2 id="CL" class="titulo">Dudas, Preguntas , Mayores Informes, Cotizaciones.</h2>
+               <h2 id="CL" class="titulo">Dudas, Comentarios, Mayores Informes, Cotizaciones.</h2>
    </div>   
 <section class="section">
     <div class="container-services">
